--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap-vue": "^2.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
