--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.2.13",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
-    "bootstrap-vue": "^2.23.1"
+    "bootstrap-vue": "^2.23.1",
+    "vue-cookies": "^1.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
